# image-gen-studio

./: .gitignore  CHANGELOG.md  README.md  build.bat  generate_images_nb2.py  image_gen_studio.py  package-lock.json  package.json  requirements.txt
.github/workflows/: quality.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  ThumbnailEditor.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsi  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  projects.rs
apps/desktop/src/components/: AppErrorBoundary.tsx
apps/desktop/src/data/: demo.ts
apps/desktop/src/domain/: visual-plan.test.ts  visual-plan.ts
apps/desktop/src/infrastructure/: logger.test.ts  logger.ts  projects-client.test.ts  projects-client.ts
apps/desktop/src/store/: app-store.ts
docs/architecture/: ADR-001-desktop-stack.md  ADR-002-local-persistence.md  ADR-003-python-engine.md  ARCHITECTURE.md
docs/engineering/: PRACTICES.md
docs/releases/: ROADMAP.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md  v1.1.0.md  v1.2.0.md
legacy/: MIGRATION.md
legacy/prototype/: build.bat  generate_images_nb2.py  image_gen_studio.py
legacy/prototype/notes/: image-inpainting-feature.txt
logic_elements/: visual_plan_generator.py
mockup/: app.js  index.html  styles.css
releases/: build-release.ps1
services/python-engine/: pyproject.toml
services/python-engine/auto_gen_engine/: __init__.py  main.py  scene_grouping_engine.py  visual_plan.py
services/python-engine/auto_gen_studio_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/python-engine/tests/: test_scene_grouping_engine.py  test_visual_plan.py
tools/standalone/: caption_generator.py  frames_extractor.py  transcript_extractor.py  visual_plan_generator.py
