[package]
name = "auto-gen-studio"
version = "0.1.0"
description = "Local-first YouTube production workspace"
authors = ["Auto Gen Studio"]
edition = "2021"

[lib]
name = "auto_gen_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

