[package]
name = "auto-gen-studio"
version = "1.0.0"
description = "Local-first YouTube production workspace"
authors = ["Auto Gen Studio"]
edition = "2021"

[lib]
name = "auto_gen_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
zip = "4"

[dev-dependencies]
tempfile = "3"
